--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,21 +11,35 @@ const last_posts = posts.slice(0, 3);
 
 <BaseLayout sideBarActiveItemID="home">
   <div class="pb-12 mt-5">
-    <div class="text-xl py-1">Hey there 👋</div>
-    <div class="text-5xl font-bold">I'm Manuel Ernesto</div>
-    <div class="text-3xl py-3 font-bold">Software Engineer and Entrepreneur</div>
+    <div class="text-xl py-1">你好！Hello! こんにちは！Привет!👋</div>
+    <div class="text-5xl font-bold">I'm ZHU Chuanbo 朱传博</div>
+    <div class="text-3xl py-3 font-bold">PhD Student 👩🏻‍💻</div>
     <div class="py-2">
       <text class="text-lg">
-        This is <b>Astrofy</b> a free and open-source template for your Personal Portfolio Website built with Astro and TailwindCSS.
-        Create in minutes a website with Blog, CV, Project Section, Store and RSS Feed. I hope you find
-        it useful!
+        My research interest is about <b>Speech Generation</b> 🗣️. 
+        <br>This blog includes links for my papers and projects.
+      </text>
+    </div>
+
+    <div class="py-2">
+      <text class="text-lg">
+        I can speak fluent <b>🇨🇳 Mandarin, 🇬🇧 English</b> and <b>🇯🇵Japanese</b>. 
+        <br> I am currently learning <b>🇷🇺 Russian</b> and <b>🇭🇰 Cantonese</b> and also interested in teaching Mandarin. 
+        <br> So I will also post blogs about <b>language learning and teaching</b>.
+      </text>
+    </div>
+
+    <div class="py-2">
+      <text class="text-lg">
+        This site is still under construction👷🏻‍♀️...
       </text>
     </div>
     <div class="mt-8">
-      <a class="btn" href="https://twitter.com/manuelernestog" target="_blank"> Let's connect!</a>
-      <a href="https://github.com/manuelernestog/astrofy" target="_blank" class="btn btn-outline ml-5">
-        Get This template
+    <a href="https://zhuchb.github.io/online-cv/" target="_blank" class="btn btn-outline ml-5">
+        Full CV
       </a>
+      <a href="http://scholar.google.com/citations?user=XrDq4vMAAAAJ&hl=en&oi=ao" target="_blank" class="btn btn-outline ml-5">Google Scholar</a>
+      
     </div>
   </div>
 
