--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const last_posts = posts.slice(0, 3);
 
     <div class="py-2">
       <text class="text-lg">
-        This site is still under construction👷🏻‍♀️...
+        This site is under construction👷🏻‍♀️...
       </text>
     </div>
     <div class="mt-8">
@@ -43,6 +43,8 @@ const last_posts = posts.slice(0, 3);
     </div>
   </div>
 
+<!--Preview for projects and blog-->
+<!--
   <div>
     <div class="text-3xl w-full font-bold mb-2">My last projects {"</>"}</div>
   </div>
@@ -89,4 +91,6 @@ const last_posts = posts.slice(0, 3);
       </>
     ))
   }
+  -->
+
 </BaseLayout>
