--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -9,10 +9,8 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <div class="mb-10 text-justify">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    For full CV, please click 
+    <a href="https://zhuchb.github.io/online-cv/" style="color: blue; text-decoration: underline;" target="_blank">here</a>.
   </div>
 
   <div class="mb-5">
