--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -9,12 +9,14 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   </div>
 
   <HorizontalCard
-    title="Demo Project 1"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="Demo Project"
+    img="/project_images/pancake.webp"
+    desc="To be confirmed. To be confirmed. To be confirmed. To be confirmed. To be confirmed. To be confirmed. To be confirmed. To be confirmed. To be confirmed."
     url="#"
     badge="NEW"
   />
+
+  <!--
   <div class="divider my-0"></div>
   <HorizontalCard
     title="Demo Project 2"
@@ -48,4 +50,5 @@ import HorizontalCard from "../components/HorizontalCard.astro";
     desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
     url="#"
   />
+-->
 </BaseLayout>
