--- a/src/components/SideBarFooter.astro
+++ b/src/components/SideBarFooter.astro
@@ -4,6 +4,8 @@
 </div>
 
 <div class="social-icons px-4 pb-5 pt-1 flex self-center justify-center sticky bottom-0 bg-base-200">
+    
+    <!--
     <a
         href="https://manuelernestog.github.io/support-my-work/"
         target="_blank"
@@ -24,7 +26,10 @@
             ></path></svg
         >
     </a>
-    <a href="https://github.com/manuelernestog" target="_blank" class="mx-3" aria-label="Github" title="Github">
+    -->
+
+
+    <a href="http://github.com/zhuchb" target="_blank" class="mx-3" aria-label="Github" title="Github">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -38,7 +43,7 @@
             ></path>
         </svg>
     </a>
-    <a href="https://twitter.com/manuelernestog" target="_blank" class="mx-3" aria-label="Twitter" title="Twitter">
+    <a href="" target="_blank" class="mx-3" aria-label="Twitter" title="Twitter">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -51,7 +56,7 @@
         </svg>
     </a>
     <a
-        href="https://www.linkedin.com/in/manuelernestogr"
+        href=""
         target="_blank"
         class="mx-3"
         aria-label="Linkedin"
