--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -19,12 +19,12 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="time-line-container grid gap-4 mb-10">
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="MEng in Electrical Engineering and Information Systems"
+      subtitle="2019 to 2021 at The University of Tokyo, Tokyo, Japan"
     />
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="BEng in Software Engineering"
+      subtitle="2015 to 2019 at Sun Yat-sen University, Guangzhou, China"
     />
   </div>
 
@@ -34,11 +34,13 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="time-line-container mb-10">
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Project Manager at Big Japanese Company"
+      subtitle="From 2022 to 2024 at とある日本大手, Tokyo, Japan"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      XR系アプリ開発の仕事をさせて頂きました。
     </TimeLineElement>
+    
+    <!--
     <TimeLineElement
       title="Job Title at Project or Company Name"
       subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
@@ -51,6 +53,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     >
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
     </TimeLineElement>
+    -->
   </div>
 
   <div class="mb-5">
@@ -59,32 +62,28 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <ul class="list-disc mx-6 mb-10 grid gap-2">
     <li>
-      <a href="#" target="_blank"> Certification Name (with link)</a>
-    </li>
-    <li>
-      <a href="#" target="_blank"> Certification Name (with link)</a>
+      <a href="https://aws.amazon.com/jp/certification/certified-solutions-architect-associate/?nc1=h_ls" style="color: blue; text-decoration: underline;"　target="_blank"> AWS Certificated Solutions Architect - Associate</a>
     </li>
   </ul>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Skills</div>
+    <div class="text-3xl w-full font-bold">Programming Skills</div>
   </div>
 
-  <ul class="list-disc md:columns-5 columns-2 mx-6">
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
+  <ul class="list-disc mx-6 mb-10 grid gap-2">
+    <li>Python</li>
+    <li display="block;">Unity</li>
+  </ul>
+
+    <div class="mb-5">
+    <div class="text-3xl w-full font-bold">Language Skills</div>
+  </div>
+
+  <ul class="list-disc mx-6 mb-10 grid gap-2">
+    <li>Mandarin - Native</li>
+    <li>Japanese - Professional</li>
+    <li>English - Professional</li>
+    <li>Cantonese - Professional</li>
+    <li>Russian - Intermediate</li>
   </ul>
 </BaseLayout>
