modified cv and copyright

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -34,7 +34,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="time-line-container mb-10">
     <TimeLineElement
-      title="Project Manager at Big Japanese Company"
+      title="Project Manager at Japanese Big Company"
       subtitle="From 2022 to 2024 at とある日本大手, Tokyo, Japan"
     >
       XR系アプリ開発の仕事をさせて頂きました。
