--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ const today = new Date();
 
 <footer class="footer footer-center block mb-5 pt-10">
   <div class="pb-2">
-    &copy; {today.getFullYear()} Manuel Ernesto
+    &copy; {today.getFullYear()} ZHU Chuanbo
   </div>
   <div class="inline opacity-75">
     Developed using
