add post for grad-tts

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -19,12 +19,16 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="time-line-container grid gap-4 mb-10">
     <TimeLineElement
+      title="PhD student"
+      subtitle="2024 to current, at The Hong Kong University of Science and Technology, Hong Kong"
+    />
+    <TimeLineElement
       title="MEng in Electrical Engineering and Information Systems"
-      subtitle="2019 to 2021 at The University of Tokyo, Tokyo, Japan"
+      subtitle="2019 to 2021, at The University of Tokyo, Tokyo, Japan"
     />
     <TimeLineElement
       title="BEng in Software Engineering"
-      subtitle="2015 to 2019 at Sun Yat-sen University, Guangzhou, China"
+      subtitle="2015 to 2019, at Sun Yat-sen University, Guangzhou, China"
     />
   </div>
 
