--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const last_posts = posts.slice(0, 3);
     <div class="py-2">
       <text class="text-lg">
         My research interest is about <b>Speech Generation</b> 🗣️. 
-        <br>This blog includes links for my papers and projects.
+        <br>This blog includes my study notes and links for my papers&projects.
       </text>
     </div>
 
@@ -25,7 +25,7 @@ const last_posts = posts.slice(0, 3);
       <text class="text-lg">
         I can speak fluent <b>🇨🇳 Mandarin, 🇬🇧 English</b> and <b>🇯🇵Japanese</b>. 
         <br> I am currently learning <b>🇷🇺 Russian</b> and <b>🇭🇰 Cantonese</b> and also interested in teaching Mandarin. 
-        <br> So I will also post blogs about <b>language learning and teaching</b>.
+        <br> So I will also post blogs about language learning and teaching.
       </text>
     </div>
 
